Added list project method and improved create folder structure